community/lists/users/att-5670/attachment
<html><body>
<p>Hello Jeff:<br>
<br>
Sorry for my delay. To user Intel compiler for openmpi, I removed openmpi installed on my machine and downloaded openmpi 1.2.5 gz file. ./configure script exited with zero. But I find errors in config.log. If any comments/advice can be given, that would be appreciated. My script argument is<br>
<br>
./configure CC=icc CXX=icpc FC=ifort F77=ifort --includedir=/opt/intel/cc/10.1.015/include:/opt/intel/fc/10.1.015/include --libdir=/opt/intel/cc/10.1.015/lib:/opt/intel/fc/10.1.015/lib<br>
<br>
  194 configure:6309: checking how to run the C preprocessor<br>
  195 configure:6349: icc -E  conftest.c<br>
  196 configure:6355: $? = 0<br>
  197 configure:6386: icc -E  conftest.c<br>
  198 conftest.c(37): error #5: could not open source file &quot;ac_nonexistent.h&quot;<br>
  199   #include &lt;ac_nonexistent.h&gt;<br>
  200                              ^<br>
  201<br>
  202 configure:6392: $? = 2<br>
  203 configure: failed program was:<br>
  204 | /* confdefs.h.  */<br>
  205 | #define PACKAGE_NAME &quot;Open MPI&quot;<br>
  206 | #define PACKAGE_TARNAME &quot;openmpi&quot;<br>
  207 | #define PACKAGE_VERSION &quot;1.2.5&quot;<br>
  208 | #define PACKAGE_STRING &quot;Open MPI 1.2.5&quot;<br>
  209 | #define PACKAGE_BUGREPORT &quot;<a href="http://www.open-mpi.org/community/help/">http://www.open-mpi.org/community/help/</a>&quot;<br>
  210 | #define OMPI_MAJOR_VERSION 1<br>
  211 | #define OMPI_MINOR_VERSION 2<br>
  212 | #define OMPI_RELEASE_VERSION 5<br>
  213 | #define OMPI_GREEK_VERSION &quot;&quot;<br>
  214 | #define OMPI_VERSION &quot;5&quot;<br>
  215 | #define ORTE_MAJOR_VERSION 1<br>
  216 | #define ORTE_MINOR_VERSION 2<br>
  217 | #define ORTE_RELEASE_VERSION 5<br>
  218 | #define ORTE_GREEK_VERSION &quot;&quot;<br>
  219 | #define ORTE_VERSION &quot;5&quot;<br>
  220 | #define OPAL_MAJOR_VERSION 1<br>
  221 | #define OPAL_MINOR_VERSION 2<br>
  222 | #define OPAL_RELEASE_VERSION 5<br>
  223 | #define OPAL_GREEK_VERSION &quot;&quot;<br>
  224 | #define OPAL_VERSION &quot;5&quot;<br>
  225 | #define OMPI_ARCH &quot;i686-pc-linux-gnu&quot;<br>
  226 | #define OMPI_ENABLE_MEM_DEBUG 0<br>
  227 | #define OMPI_ENABLE_MEM_PROFILE 0<br>
  228 | #define OMPI_ENABLE_DEBUG 0<br>
  229 | #define OMPI_WANT_MPI_CXX_SEEK 1<br>
  230 | #define MPI_PARAM_CHECK ompi_mpi_param_check<br>
  231 | #define OMPI_WANT_PRETTY_PRINT_STACKTRACE 1<br>
  232 | #define OMPI_WANT_PERUSE 0<br>
  233 | #define OMPI_ENABLE_PTY_SUPPORT 1<br>
  234 | #define OMPI_ENABLE_HETEROGENEOUS_SUPPORT 1<br>
  235 | #define OPAL_ENABLE_TRACE 0<br>
  236 | #define OPAL_ENABLE_IPV6 1<br>
  237 | #define ORTE_WANT_ORTERUN_PREFIX_BY_DEFAULT 0<br>
  238 | #define OMPI_CC &quot;icc&quot;<br>
  239 | /* end confdefs.h.  */<br>
  240 | #include &lt;ac_nonexistent.h&gt;<br>
  241 configure:6425: result: icc -E<br>
  242 configure:6454: icc -E  conftest.c<br>
  243 configure:6460: $? = 0<br>
  244 configure:6491: icc -E  conftest.c<br>
  245 conftest.c(37): error #5: could not open source file &quot;ac_nonexistent.h&quot;<br>
  246   #include &lt;ac_nonexistent.h&gt;<br>
  247                              ^<br>
<br>
Thanks!<br>
<br>
Wen Hao Wang<br>
<br>
<img width="16" height="16" src="cid:1__=C7BBFED9DFBDDC598f9e8a93df938@cn.ibm.com" border="0" alt="Inactive hide details for Jeff Squyres &lt;jsquyres@cisco.com&gt;">Jeff Squyres &lt;jsquyres@cisco.com&gt;<br>
<br>
<br>

<table width="100%" border="0" cellspacing="0" cellpadding="0">
<tr valign="top"><td style="background-image:url(cid:2__=C7BBFED9DFBDDC598f9e8a93df938@cn.ibm.com); background-repeat: no-repeat; " width="40%">
<ul>
<ul>
<ul>
<ul><b><font size="2">Jeff Squyres &lt;jsquyres@cisco.com&gt;</font></b><font size="2"> </font><br>
<font size="2">Sent by: users-bounces@open-mpi.org</font>
<p><font size="2">2008-05-13 08:43</font>
<table border="1">
<tr valign="top"><td width="168" bgcolor="#FFFFFF"><div align="center"><font size="2">Please respond to<br>
Open MPI Users &lt;users@open-mpi.org&gt;</font></div></td></tr>
</table>
</ul>
</ul>
</ul>
</ul>
</td><td width="60%">
<table width="100%" border="0" cellspacing="0" cellpadding="0">
<tr valign="top"><td width="1%"><img width="58" height="1" src="cid:3__=C7BBFED9DFBDDC598f9e8a93df938@cn.ibm.com" border="0" alt=""><br>
<div align="right"><font size="2">To</font></div></td><td width="100%"><img width="1" height="1" src="cid:3__=C7BBFED9DFBDDC598f9e8a93df938@cn.ibm.com" border="0" alt=""><br>
<font size="2">Open MPI Users &lt;users@open-mpi.org&gt;</font></td></tr>

<tr valign="top"><td width="1%"><img width="58" height="1" src="cid:3__=C7BBFED9DFBDDC598f9e8a93df938@cn.ibm.com" border="0" alt=""><br>
<div align="right"><font size="2">cc</font></div></td><td width="100%"><img width="1" height="1" src="cid:3__=C7BBFED9DFBDDC598f9e8a93df938@cn.ibm.com" border="0" alt=""><br>
</td></tr>

<tr valign="top"><td width="1%"><img width="58" height="1" src="cid:3__=C7BBFED9DFBDDC598f9e8a93df938@cn.ibm.com" border="0" alt=""><br>
<div align="right"><font size="2">Subject</font></div></td><td width="100%"><img width="1" height="1" src="cid:3__=C7BBFED9DFBDDC598f9e8a93df938@cn.ibm.com" border="0" alt=""><br>
<font size="2">Re: [OMPI users] Compiler Choice in openmpi</font></td></tr>
</table>

<table border="0" cellspacing="0" cellpadding="0">
<tr valign="top"><td width="58"><img width="1" height="1" src="cid:3__=C7BBFED9DFBDDC598f9e8a93df938@cn.ibm.com" border="0" alt=""></td><td width="336"><img width="1" height="1" src="cid:3__=C7BBFED9DFBDDC598f9e8a93df938@cn.ibm.com" border="0" alt=""></td></tr>
</table>
</td></tr>
</table>
<br>
<tt>On May 11, 2008, at 12:00 AM, Wen Hao Wang wrote:<br>
<br>
&gt; 1. How can I change/set Fortran compiler used after installing &nbsp;<br>
&gt; openmpi?<br>
&gt; I installed openmpi-1.2.5-2 on RHEL5.2 Server with x86_32 arch. The &nbsp;<br>
&gt; rpm has been shipped RHEL images. I directly installed the rpms &nbsp;<br>
&gt; without compiling the source code. Now all mpi* compiler wrappers &nbsp;<br>
&gt; point to GNU compilers. I need change to use Intel compilers by &nbsp;<br>
&gt; default. How should I do? I caught one message about configuration &nbsp;<br>
&gt; files /etc/openmpi-mca-params.conf and $HOME/.openmpi/mca- <br>
&gt; params.conf. Not sure whether these two files can help. While I &nbsp;<br>
&gt; failed to find detailed explanation for them.<br>
&gt;<br>
<br>
You really need to compile Open MPI from source for this; &nbsp;<br>
unfortunately, there are several aspects of Open MPI that are tied to &nbsp;<br>
the specific compiler chain that is used. &nbsp;Specifically: you *might* &nbsp;<br>
be able to get away without re-compiling Open MPI, but I wouldn't &nbsp;<br>
advise it.<br>
<br>
You can download the OMPI source tarball from the main web site and &nbsp;<br>
configure it with the following to specify the intel compiler suite:<br>
<br>
 &nbsp; &nbsp; ./configure CC=icc CXX=icpc FC=ifort F77=ifort ...<br>
<br>
You may want to list other configure options, such as --prefix, -- <br>
enable-mpirun-prefix-by-default, etc.<br>
&gt; 2. Can I use Intel compiler and GNU compiler together?<br>
&gt; I am not sure whether I can use two types of compiler to compile one &nbsp;<br>
&gt; program. For example, use GNU c/c++ compiler and Intel Fortran &nbsp;<br>
&gt; compiler together to compile my project.<br>
&gt;<br>
<br>
<br>
Yes, there are cases where this works. &nbsp;But if possible, it's &nbsp;<br>
generally easiest to simply use a single compiler toolset (e.g., all &nbsp;<br>
Intel or all GNU). &nbsp;More specifically, unless you have a *need* to mix &nbsp;<br>
the compilers, just use a single toolset.<br>
<br>
-- <br>
Jeff Squyres<br>
Cisco Systems<br>
<br>
_______________________________________________<br>
users mailing list<br>
users@open-mpi.org<br>
</tt><tt><a href="http://www.open-mpi.org/mailman/listinfo.cgi/users">http://www.open-mpi.org/mailman/listinfo.cgi/users</a></tt><tt><br>
</tt><br>
</body></html>

